<resources>
    <string name="app_name">Smart Load Services</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pks_package">com.okspinoy.app.smartloadservices</string>

    <string name="alert_only_available_ph">This application is only available in the Philippines.</string>
    <string name="alert_only_available_smart">Smart number not detected. Please make sure you are using a Smart number every time you do transaction.</string>
    <string name="alert_dualsim">Dual sim card detected. Please make sure you choose smart sim every time you do transaction.</string>

    <string name="call_not_supported_message">Taking call is not supported by this phone</string>
    <string name="not_yet">This exciting feature is not yet available.</string>
    <string name="delete_transaction_message">Are you sure you want to delete this transaction?</string>

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_close">Close</string>

    <string name="yes_big">Yes</string>
    <string name="open_big">Open</string>
    <string name="proceed_big">Proceed</string>
    <string name="cancel_big">Cancel</string>

    <string name="sms_allnet_rb">SMS ALLNET</string>
    <string name="sms_onnet_rb">SMS ONNET</string>
    <string name="sms_bigtext_rb">BIGTEXT7</string>
    <string name="sms_allnet">SMS ALL NET</string>
    <string name="sms_allnet_description">5 texts to any network valid for 24 hours.</string>
    <string name="sms_allnet_price">PRICE: Php 5</string>
    <string name="sms_allnet_points">REWARD: 4 points</string>
    <string name="sms_onnet">SMS ON NET</string>
    <string name="sms_onnet_description">4 texts to SMART/TNT valid for 24 hours.</string>
    <string name="sms_onnet_price">PRICE: Php 5</string>
    <string name="sms_onnet_points">REWARD: 3 points</string>
    <string name="big_text7">BIG TEXT 7</string>
    <string name="big_text7_description">9 texts to SMART/TNT valid for 24 hours.</string>
    <string name="big_text7_price">PRICE: Php 7</string>
    <string name="big_text7_points">REWARD: 5 points</string>
    <string name="you_have_empty_transactions">You have empty transactions!</string>
    <string name="send_to">Send to</string>
    <string name="load_amount">Load amount</string>
    <string name="points_caps">MY POINTS</string>

    <string name="title_activity_variants">GET LOADED</string>
    <string name="title_activity_transaction">TRANSACTIONS</string>
    <string name="title_activity_points">MY POINTS</string>
    <string name="title_activity_pasaload">PASALOAD</string>
    <string name="title_activity_redeem">SPECIAL REWARDS</string>
    <string name="title_activity_rewards">NORMAL REWARDS</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="title_activity_pasaload_confirmation_message">New Message</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_pasaload_message">PasaloadMessageActivity</string>
    <string name="action_translate">TRANSLATE</string>
    <string name="action_tagalog">TAGALOG</string>

</resources>
